localhost update-users fix

--- a/config.cfg
+++ b/config.cfg
@@ -114,7 +114,7 @@ congrats:
   p12_pass: |
     "#        The p12 and SSH keys password for new users is {{ p12_export_password }}       #"
   ca_key_pass: |
-    "#        The CA key password is {{ CA_password }}       #"
+    "#        The CA key password is {{ CA_password|default(omit) }}       #"
   ssh_access: |
     "#      Shell access: ssh -i {{ ansible_ssh_private_key_file|default(omit) }} {{ ansible_ssh_user|default(omit) }}@{{ ansible_ssh_host|default(omit) }}        #"
 
