--- a/config.cfg
+++ b/config.cfg
@@ -126,10 +126,10 @@ SSH_keys:
 cloud_providers:
   azure:
     size: Basic_A0
-    image: 18.04-LTS
+    image: 19.04
   digitalocean:
     size: s-1vcpu-1gb
-    image: "ubuntu-18-04-x64"
+    image: "ubuntu-19-04-x64"
   ec2:
     # Change the encrypted flag to "true" to enable AWS volume encryption, for encryption of data at rest.
     # Warning: the Algo script will take approximately 6 minutes longer to complete.
@@ -139,11 +139,11 @@ cloud_providers:
     use_existing_eip: false
     size: t2.micro
     image:
-      name: "ubuntu-bionic-18.04"
+      name: "ubuntu-disco-19.04"
       owner: "099720109477"
   gce:
     size: f1-micro
-    image: ubuntu-1804
+    image: ubuntu-1904
     external_static_ip: false
   lightsail:
     size: nano_1_0
@@ -156,7 +156,7 @@ cloud_providers:
     flavor_ram: ">=512"
     image:  Ubuntu-18.04
   vultr:
-    os: Ubuntu 18.04 x64
+    os: Ubuntu 19.04 x64
     size: 1024 MB RAM,25 GB SSD,1.00 TB BW
   local:
 
