--- a/.travis.yml
+++ b/.travis.yml
@@ -72,9 +72,10 @@ stages:
       apt:
         sources: *default_sources
         packages: *default_packages
+    env: DEPLOY=docker
     before_install: *provisioning
     before_script:
-      - docker build -t travis/algo .
+      - make docker-build
       - ./tests/local-deploy.sh
       - ./tests/update-users.sh
     script: *tests
