--- a/config.cfg
+++ b/config.cfg
@@ -125,7 +125,7 @@ SSH_keys:
 
 cloud_providers:
   azure:
-    size: Basic_A0
+    size: Standard_B1S
     image: 19.04
   digitalocean:
     size: s-1vcpu-1gb
