congrats message fix

--- a/config.cfg
+++ b/config.cfg
@@ -98,7 +98,7 @@ dns_servers:
 # Supports on MacOS and Linux only (including Windows Subsystem for Linux)
 pki_in_tmpfs: true
 
-# Set this to 'true' when running './algo update-users' if you want ALL users to get new certs, not just new users. 
+# Set this to 'true' when running './algo update-users' if you want ALL users to get new certs, not just new users.
 keys_clean_all: false
 
 # StrongSwan log level
@@ -138,7 +138,7 @@ congrats:
   ca_key_pass: |
     "#        The CA key password is {{ CA_password|default(omit) }}       #"
   ssh_access: |
-    "#      Shell access: ssh -i {{ SSH_keys.private }} {{ ansible_ssh_user|default(omit) }}@{{ ansible_ssh_host|default(omit) }} -p {{ ssh_port }}        #"
+    "#      Shell access: ssh -F configs/{{ ansible_ssh_host|default(omit) }}/ssh_config algo        #"
 
 SSH_keys:
   comment: algo@ssh
