--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
           env
           echo BRANCH: $BRANCH
         env:
-          BRANCH: ${{ github.event.pull_request.head.ref || github.event.push.ref }}
+          BRANCH: ${{ github.event == "pull_request" && github.event.pull_request.head.ref || github.event.push.ref }}
 
       - name: Install dependencies
         run: |
