--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,10 @@ jobs:
 
       - name: test
         run: |
-          env
+          # env
           echo BRANCH: $BRANCH
         env:
-          BRANCH: ${{ github.event == "pull_request" && github.event.pull_request.head.ref || github.event.push.ref }}
+          BRANCH: ${{ github.event == 'pull_request' && github.event.pull_request.head.ref || github.event.push.ref }}
 
       - name: Install dependencies
         run: |
