--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
         run: |
           # env
           echo BRANCH: $BRANCH
+          echo ${{ github.event }}
         env:
           BRANCH: ${{ github.event == 'pull_request' && github.event.pull_request.head.ref || github.event.push.ref }}
 
