--- a/playbooks/cloud-post.yml
+++ b/playbooks/cloud-post.yml
@@ -19,6 +19,7 @@
     algo_dns_adblocking: "{{ algo_dns_adblocking }}"
     algo_ssh_tunneling: "{{ algo_ssh_tunneling }}"
     algo_store_pki: "{{ algo_store_pki }}"
+    algo_armbian: "{{ algo_armbian }}"
     IP_subject_alt_name: "{{ IP_subject_alt_name }}"
     cloudinit: "{{ cloudinit|default(false) }}"
 
