--- a/config.cfg
+++ b/config.cfg
@@ -149,10 +149,10 @@ SSH_keys:
 cloud_providers:
   azure:
     size: Standard_B1S
-    image: 19.04
+    image: 19.10-DAILY
   digitalocean:
     size: s-1vcpu-1gb
-    image: "ubuntu-19-04-x64"
+    image: "ubuntu-19-10-x64"
   ec2:
     # Change the encrypted flag to "false" to disable AWS volume encryption.
     encrypted: true
@@ -161,11 +161,11 @@ cloud_providers:
     use_existing_eip: false
     size: t2.micro
     image:
-      name: "ubuntu-disco-19.04"
+      name: "ubuntu-eoan-19.10"
       owner: "099720109477"
   gce:
     size: f1-micro
-    image: ubuntu-1904
+    image: ubuntu-1910
     external_static_ip: false
   lightsail:
     size: nano_1_0
@@ -182,10 +182,10 @@ cloud_providers:
     image:  Ubuntu-18.04
   cloudstack:
     size: Micro
-    image: Linux Ubuntu 19.04 64-bit
+    image: Linux Ubuntu 19.10 64-bit
     disk: 10
   vultr:
-    os: Ubuntu 19.04 x64
+    os: Ubuntu 19.10 x64
     size: 1024 MB RAM,25 GB SSD,1.00 TB BW
   local:
 
