Apply netplan for digitalocean only

--- a/roles/common/tasks/aip/digitalocean.yml
+++ b/roles/common/tasks/aip/digitalocean.yml
@@ -11,3 +11,13 @@
 - name: Set SNAT IP as a fact
   set_fact:
     snat_aipv4: "{{ anchor_ipv4.content }}"
+
+- name: IPv6 egress alias configured
+  template:
+    src: 99-algo-ipv6-egress.yaml.j2
+    dest: /etc/netplan/99-algo-ipv6-egress.yaml
+  when:
+    - ipv6_support
+    - ipv6_subnet_size|int > 1
+  notify:
+    - netplan apply
