Allow more users

--- a/config.cfg
+++ b/config.cfg
@@ -1,10 +1,10 @@
 ---
 
 # This is the list of users to generate.
-# Every device must have a unique username.
-# You can generate up to 250 users at one time.
-# Usernames with leading 0's or containing only numbers should be escaped in double quotes, e.g. "000dan" or "123".
-# Emails are not allowed
+# Every device must have a unique user.
+# You can add up to 65,534 new users over the lifetime of an AlgoVPN.
+# User names with leading 0's or containing only numbers should be escaped in double quotes, e.g. "000dan" or "123".
+# Email addresses are not allowed.
 users:
   - phone
   - laptop
@@ -114,7 +114,7 @@ strongswan_log_level: 2
 
 # rightsourceip for ipsec
 # ipv4
-strongswan_network: 10.19.48.0/24
+strongswan_network: 10.48.0.0/16
 # ipv6
 strongswan_network_ipv6: '2001:db8:4160::/48'
 
@@ -124,7 +124,7 @@ strongswan_network_ipv6: '2001:db8:4160::/48'
 wireguard_PersistentKeepalive: 0
 
 # WireGuard network configuration
-wireguard_network_ipv4: 10.19.49.0/24
+wireguard_network_ipv4: 10.49.0.0/16
 wireguard_network_ipv6: 2001:db8:a160::/48
 
 # Randomly generated IP address for the local dns resolver
