--- a/config.cfg
+++ b/config.cfg
@@ -92,6 +92,7 @@ dnscrypt_servers:
     - cloudflare-ipv6
 
 # DNS servers which will be used if 'dns_encryption' is 'false'.
+# Fallback resolvers for systemd-resolved
 # The default is to use Cloudflare.
 dns_servers:
   ipv4:
@@ -158,8 +159,8 @@ cloud_providers:
     size: Standard_B1S
     image:
       publisher: Canonical
-      offer: 0001-com-ubuntu-server-focal-daily
-      sku: 20_04-daily-lts
+      offer: 0001-com-ubuntu-server-focal
+      sku: 20_04-lts-gen2
       version: latest
   digitalocean:
     size: s-1vcpu-1gb
